# SmallAgents

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  api_agent.py  async_agent.py  async_search_agent.py  base_agent.py  search_agent.py  social_media_video_agent.py
examples/: README.md  basic_usage.py
integrations/: README.md  n8n-veo3-blotato-workflow.json
tests/: test_api_agent.py  test_async_search_agent.py  test_base_agent.py  test_search_agent.py  test_social_media_video_agent.py
utils/: __init__.py  helpers.py
